modify to use new helm pkg
