# docs/swagger/swagger.yaml
@@ -18,12 +18,12 @@ definitions:
     type: object
   instance.Application:
     properties:
+      chart:
+        type: string
       install:
         type: boolean
       links:
-        items:
-          type: string
-        type: array
+        type: object
       name:
         type: string
       namespace:
@@ -67,7 +67,7 @@ info:
   title: Walm
   version: 1.0.0
 paths:
-  /{namespace}/{name}:
+  /cluster/namespace/{namespace}/name/{name}:
     delete:
       consumes:
       - application/json
@@ -151,7 +151,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: Deplou an Cluster
+      description: Deploy an Cluster
       parameters:
       - description: identifier of the namespace
         in: path
@@ -195,12 +195,65 @@ paths:
             type: object
       tags:
       - Cluster
-  /instance/{chart}:
+  /cluster/namespace/{namespace}/name/{name}/instance:
+    post:
+      consumes:
+      - application/json
+      description: Deploy an Instance into Cluster
+      parameters:
+      - description: identifier of the namespace
+        in: path
+        name: namespace
+        required: true
+        type: string
+      - description: the name of cluster
+        in: path
+        name: name
+        required: true
+        type: string
+      - description: Apps of Cluster
+        in: body
+        name: apps
+        required: true
+        schema:
+          $ref: '#/definitions/instance.Application'
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ex.ApiResponse'
+            type: object
+        "400":
+          description: Invalid Name supplied!
+          schema:
+            $ref: '#/definitions/ex.ApiResponse'
+            type: object
+        "404":
+          description: namespace not found
+          schema:
+            $ref: '#/definitions/ex.ApiResponse'
+            type: object
+        "500":
+          description: Server Error
+          schema:
+            $ref: '#/definitions/ex.ApiResponse'
+            type: object
+      tags:
+      - Cluster
+  /instance/namespace/{namespace}/chart/{chart}:
     post:
       consumes:
       - application/json
       description: deploy an application with the givin data
       parameters:
+      - description: identifier of the chart
+        in: path
+        name: namespace
+        required: true
+        type: string
       - description: identifier of the chart
         in: path
         name: chart
@@ -245,6 +298,11 @@ paths:
       parameters:
       - description: identifier of the chart
         in: path
+        name: namespace
+        required: true
+        type: string
+      - description: identifier of the chart
+        in: path
         name: chart
         required: true
         type: string
@@ -285,12 +343,17 @@ paths:
             type: object
       tags:
       - instance
-  /instance/{namespace}/{appname}:
+  /instance/namespace/{namespace}/name/{appname}:
     delete:
       consumes:
       - application/json
       description: Delete an Appliation
       parameters:
+      - description: identifier of the chart
+        in: path
+        name: namespace
+        required: true
+        type: string
       - description: identifier of the application
         in: path
         name: appname
@@ -321,7 +384,7 @@ paths:
             type: object
       tags:
       - instance
-  /instance/{namespace}/info/{appname}:
+  /instance/namespace/{namespace}/name/{appname}/info:
     get:
       consumes:
       - application/json
@@ -367,65 +430,7 @@ paths:
             type: object
       tags:
       - instance
-  /instance/{namespace}/rollback/{appname}/{version}:
-    get:
-      consumes:
-      - application/json
-      description: Rollback Application to aim version
-      parameters:
-      - description: identifier of the application
-        in: path
-        name: appname
-        required: true
-        type: string
-      - description: identifier of the version
-        in: path
-        name: version
-        required: true
-        type: string
-      - description: if recreate pods
-        in: query
-        name: recreate
-        type: boolean
-      - description: if force to update and restart pods
-        in: query
-        name: force
-        type: boolean
-      - description: if wait for finish
-        in: query
-        name: wait
-        type: boolean
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: ok
-          schema:
-            $ref: '#/definitions/instance.Info'
-            type: object
-        "400":
-          description: Invalid Name supplied!
-          schema:
-            $ref: '#/definitions/ex.ApiResponse'
-            type: object
-        "404":
-          description: Application not found
-          schema:
-            $ref: '#/definitions/ex.ApiResponse'
-            type: object
-        "405":
-          description: Invalid input
-          schema:
-            $ref: '#/definitions/ex.ApiResponse'
-            type: object
-        "500":
-          description: Server Error
-          schema:
-            $ref: '#/definitions/ex.ApiResponse'
-            type: object
-      tags:
-      - instance
-  /instance/{namespace}/status/{appname}:
+  /instance/namespace/{namespace}/name/{appname}/status:
     get:
       consumes:
       - application/json
@@ -487,6 +492,69 @@ paths:
             type: object
         "404":
           description: Invalid status not found
+          schema:
+            $ref: '#/definitions/ex.ApiResponse'
+            type: object
+        "500":
+          description: Server Error
+          schema:
+            $ref: '#/definitions/ex.ApiResponse'
+            type: object
+      tags:
+      - instance
+  /instance/namespace/{namespace}/name/{appname}/version/{version}/rollback:
+    get:
+      consumes:
+      - application/json
+      description: Rollback Application to aim version
+      parameters:
+      - description: identifier of the chart
+        in: path
+        name: namespace
+        required: true
+        type: string
+      - description: identifier of the application
+        in: path
+        name: appname
+        required: true
+        type: string
+      - description: identifier of the version
+        in: path
+        name: version
+        required: true
+        type: string
+      - description: if recreate pods
+        in: query
+        name: recreate
+        type: boolean
+      - description: if force to update and restart pods
+        in: query
+        name: force
+        type: boolean
+      - description: if wait for finish
+        in: query
+        name: wait
+        type: boolean
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            $ref: '#/definitions/instance.Info'
+            type: object
+        "400":
+          description: Invalid Name supplied!
+          schema:
+            $ref: '#/definitions/ex.ApiResponse'
+            type: object
+        "404":
+          description: Application not found
+          schema:
+            $ref: '#/definitions/ex.ApiResponse'
+            type: object
+        "405":
+          description: Invalid input
           schema:
             $ref: '#/definitions/ex.ApiResponse'
             type: object
